Fixed Spacing

--- a/styles.css
+++ b/styles.css
@@ -51,9 +51,11 @@ nav a:hover {
 
 #about-me{
   display: flex;
+  height: 90vh;
   flex-direction: column;
   align-items: center;
-  padding: 10% 5%;
+  justify-content: center;
+  padding: 0 5%;
   color: #c7c6c6;;
 }
 
@@ -85,6 +87,7 @@ h3 {
   flex-direction: column;
   align-items: center;
   padding-bottom: 10%;
+  height: 40vh;
 }
 
 .projects-grid {
@@ -119,7 +122,6 @@ h3 {
   display: flex;
   flex-direction: column;
   height: 20%;
-  padding: 10% 0;
 }
 .socials {
   width: 50%;
